--- a/Project3/Main.storyboard
+++ b/Project3/Main.storyboard
@@ -26,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select a restaurant:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C7q-cM-kmL">
-                                <rect key="frame" x="16" y="165" width="343" height="21"/>
+                                <rect key="frame" x="16" y="160" width="343" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
@@ -39,13 +39,35 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rm6-ge-qVc">
+                                <rect key="frame" x="164" y="570" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Go"/>
+                                <connections>
+                                    <segue destination="hTU-tA-nQG" kind="show" id="eoL-7y-urP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pk-8f-zKF">
+                                <rect key="frame" x="161" y="617" width="52" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Log out"/>
+                                <connections>
+                                    <action selector="logOut:" destination="D8o-Qf-gLR" eventType="touchUpInside" id="T44-bl-GLv"/>
+                                </connections>
+                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AKi-Um-YhE">
-                                <rect key="frame" x="16" y="194" width="343" height="343"/>
+                                <rect key="frame" x="16" y="201" width="343" height="415"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Filter restaurants by name" id="h7D-3A-vuC">
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="56"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="cell" textLabel="Sm7-Y9-tsf" detailTextLabel="RQU-Sn-Ojd" style="IBUITableViewCellStyleSubtitle" id="O4a-uI-Ce4">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                        <rect key="frame" x="0.0" y="84" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O4a-uI-Ce4" id="hcU-tB-nnJ">
                                             <rect key="frame" x="0.0" y="0.0" width="304" height="43.5"/>
@@ -70,23 +92,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rm6-ge-qVc">
-                                <rect key="frame" x="164" y="570" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Go"/>
-                                <connections>
-                                    <segue destination="hTU-tA-nQG" kind="show" id="eoL-7y-urP"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pk-8f-zKF">
-                                <rect key="frame" x="161" y="617" width="52" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Log out"/>
-                                <connections>
-                                    <action selector="logOut:" destination="D8o-Qf-gLR" eventType="touchUpInside" id="T44-bl-GLv"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="kJe-OA-iOJ"/>
@@ -100,12 +105,22 @@
                     </navigationItem>
                     <connections>
                         <outlet property="nameLabel" destination="2gw-tz-Ae7" id="xON-Bf-UPl"/>
+                        <outlet property="searchBar" destination="h7D-3A-vuC" id="Fqd-uJ-Dd4"/>
+                        <outlet property="searchDisplayController" destination="Xat-Id-ybT" id="1OV-MD-tvh"/>
                         <outlet property="tableView" destination="AKi-Um-YhE" id="C0R-Af-ef6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="is2-iT-aqq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Xat-Id-ybT">
+                    <connections>
+                        <outlet property="delegate" destination="D8o-Qf-gLR" id="cnh-aZ-uK6"/>
+                        <outlet property="searchContentsController" destination="D8o-Qf-gLR" id="EqX-Jr-A61"/>
+                        <outlet property="searchResultsDataSource" destination="D8o-Qf-gLR" id="Yfk-51-YjO"/>
+                        <outlet property="searchResultsDelegate" destination="D8o-Qf-gLR" id="DSV-Lc-nPh"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1496.8" y="-199.25037481259372"/>
+            <point key="canvasLocation" x="1497" y="-198"/>
         </scene>
         <!--Settings-->
         <scene sceneID="pG1-pd-5M3">
