--- a/Project3/Main.storyboard
+++ b/Project3/Main.storyboard
@@ -377,7 +377,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5qU-3p-6f8">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ero-l1-1wX" customClass="InterestBox">
                                         <rect key="frame" x="67" y="48" width="240" height="240"/>
@@ -1238,6 +1238,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fs3-qb-jpx"/>
+        <segue reference="eoL-7y-urP"/>
     </inferredMetricsTieBreakers>
 </document>
